add new types of lesson